k8s_1.8.5/traefik/https/rc/ui-svc.yaml
# Dashboard
kind: Service
apiVersion: v1
metadata:
  name: traefik-admin-service
  namespace: loadbalancer
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 8580
  type: ClusterIP
